[gd_scene load_steps=24 format=3 uid="uid://dmiytvm8d5mcf"]

[ext_resource type="Script" uid="uid://dfwp51ndrscyq" path="res://scenes/game/bomb.gd" id="1_k2dax"]
[ext_resource type="Texture2D" uid="uid://8axnyimum1po" path="res://assets/graphics/bombs2.png" id="2_k2dax"]
[ext_resource type="Texture2D" uid="uid://74up86nvkhee" path="res://assets/graphics/explode.png" id="3_s5866"]
[ext_resource type="AudioStream" uid="uid://c8ihxx1nuibha" path="res://assets/sounds/bomb_explosion.mp3" id="4_5p7t1"]
[ext_resource type="AudioStream" uid="uid://b4hrvhgbshv7f" path="res://assets/sounds/bomb_falling.mp3" id="5_62ogg"]
[ext_resource type="AudioStream" uid="uid://c8w2lre10y6p3" path="res://assets/sounds/bomb_dropped.mp3" id="6_ssmv8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s5866"]
atlas = ExtResource("2_k2dax")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p7t1"]
atlas = ExtResource("2_k2dax")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62ogg"]
atlas = ExtResource("2_k2dax")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssmv8"]
atlas = ExtResource("2_k2dax")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1yub"]
atlas = ExtResource("3_s5866")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hym1"]
atlas = ExtResource("3_s5866")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuiyt"]
atlas = ExtResource("3_s5866")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wudx"]
atlas = ExtResource("3_s5866")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkra6"]
atlas = ExtResource("3_s5866")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_28u5b"]
atlas = ExtResource("3_s5866")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aj83"]
atlas = ExtResource("3_s5866")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sy1v"]
atlas = ExtResource("2_k2dax")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xom3y"]
atlas = ExtResource("2_k2dax")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_me6fu"]
atlas = ExtResource("2_k2dax")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7xiu"]
atlas = ExtResource("2_k2dax")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ssmv8"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_s5866")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p7t1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_62ogg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssmv8")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1yub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hym1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuiyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wudx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkra6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28u5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aj83")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_2sy1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xom3y")
}],
"loop": true,
"name": &"mid",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_me6fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7xiu")
}],
"loop": true,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5p7t1"]
size = Vector2(20, 64)

[node name="Bomb" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_k2dax")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ssmv8")
animation = &"start"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5p7t1")

[node name="bomb_explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5p7t1")
volume_db = -4.0

[node name="bomb_falling" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_62ogg")
volume_db = -4.0

[node name="bomb_dropped" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ssmv8")
volume_db = -11.0

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
